chor: add dependencies